<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Введите имя"
                android:ems="10"
                android:hint="@string/input_name"
                android:inputType="textPersonName"
                android:text="@string/name" />

            <EditText
                android:id="@+id/input_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Введите телефон"
                android:ems="10"
                android:hint="@string/input_phone"
                android:inputType="phone"
                android:text="@string/phone" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checkedButton="@+id/radioButton">
                <!--android:orientation="vertical"-->


                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rbSize1" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rbSize2" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rbSize3" />
            </RadioGroup>

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chb_adds_1"
                android:onClick="check_box1_onClick"/>

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chb_adds_2"
                android:onClick="check_box2_onClick"/>

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chb_adds_3"
                android:onClick="check_box3_onClick"/>

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chb_adds_4"
                android:onClick="check_box4_onClick"/>

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chb_adds_5"
                android:onClick="check_box5_onClick"/>

            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chb_adds_6"
                android:onClick="check_box6_onClick"/>

            <Spinner
                android:id="@+id/spinner_pay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/pay"/>

            <EditText
                android:id="@+id/cardNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/card_number"
                android:inputType="numberDecimal"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/dateCardEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/date_card"
                android:inputType="date"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/cardCVV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/cvv_cvc2"
                android:inputType="numberDecimal"
                android:visibility="invisible" />

            <Switch
                android:id="@+id/email_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_switch"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:onClick='switch_email_onClick'
                android:visibility="visible" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/txtResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtResult"
                android:textAlignment="textEnd"
                android:textAllCaps="true"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>